Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/delete.mdx
+++ b/api-reference/endpoint/delete.mdx
@@ -1,4 +1,8 @@
 ---
-title: 'Delete Plant'
-openapi: 'DELETE /plants/{id}'
+title: "Delete Plant"
+openapi: "DELETE /plants/{id}"
 ---
+
+<Warning>
+  
+</Warning>
