Documentation edits made through Mintlify web editor

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -107,7 +107,9 @@ $$
 
 ## Next steps
 
-Now that you have your docs running, explore these key features:
+<Card title="New Card" icon="sparkles">
+  
+</Card>
 
 <CardGroup cols={2}>
   <Card title="Write Content" icon="pen-to-square" href="/essentials/markdown">
@@ -123,6 +125,8 @@ Now that you have your docs running, explore these key features:
     Auto-generate API docs from OpenAPI specs.
   </Card>
 </CardGroup>
+
+Now that you have your docs running, explore these key features:
 
 <Note>
   **Need help?** See our [full documentation](https://mintlify.com/docs) or join our [community](https://mintlify.com/community).
